# sonic_agent

./: .env.example  README.md  chainlit.md  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
Docker/: .dockerignore  Dockerfile  README.md  debug-checkpoint.py  deploy.sh  docker-compose.yml  nginx.conf  note.txt  test-async-mongo-connection.py  test-mongo-connection.sh  test-state-persistence.py
Docker/env/: .env.app
src/: __init__.py
src/Agents/: LLM.py  __init__.py  runtime.py
src/Agents/mw_migration/: __init__.py  graph.py  langgraph.json  nodes.py  tools.py
src/Agents/mw_migration/prompt/: GENAI.txt  request_converter.txt
src/Agents/mw_migration/prompt/api_endpoint/: api_endpoint_orchestrator.txt  api_generation.txt  endpoint_generation.txt
src/Agents/mw_migration/prompt/custom_fault/: custom_exception_orchestrator.txt  fault-analyzer.txt  fault_sequence_orchestrator.txt  main_sequence_orchestrator.txt
src/Agents/mw_migration/prompt/editing/: edit_wso2_code.txt
src/Agents/mw_migration/prompt/example/: GENAI.txt  MultiOptions.txt  (+20 more)
src/Agents/smart_wso2_assistant/: __init__.py  graph.py  langgraph.json  markdown_formatter.py  models.py  nodes.py  prompts.py  tools.py
src/Agents/sonic/: LLM.py  __init__.py  graph.py  langgraph.json  nodes.py  prompts.py  seq_example.py
src/Backend/: __init__.py
src/Backend/routes/: __init__.py  agent.py
src/Backend/schema/: input_schema.py
src/Frontend/: app.py  chainlit.md
src/Frontend/.chainlit/: config.toml
src/Frontend/public/: seq_sonic.css  theme.json
src/config/: config.py
(+12 files in other folders)
