[project]
name = "job-description-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4==0.0.2",
    "langchain==0.3.25",
    "langchain-community==0.3.25",
    "langchain-core==0.3.72",
    "langchain-groq==0.3.7",
    "langchain-huggingface==0.2.0",
    "langchain-openai==0.3.20",
    "langgraph==0.3.5",
    "langgraph-cli==0.2.10",
    "langgraph-sdk==0.1.69",
    "openai==1.79.0",
    "opencv-python==4.12.0.88",
    "paddleocr==3.1.0",
    "paddlepaddle==3.1.0",
    "pillow==11.3.0",
    "pydantic==2.11.4",
    "pymupdf==1.26.3",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
]
